# presidio-hardened-esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  PRESIDIO-REQ.md  README.md  SECURITY.md  idf_component.yml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
include/: presidio_anomaly.h  presidio_boot.h  presidio_input.h  presidio_log.h  presidio_nvs.h  presidio_security.h  presidio_tls.h
src/: presidio_anomaly.c  presidio_boot.c  presidio_input.c  presidio_log.c  presidio_nvs.c  presidio_security.c  presidio_tls.c
test/: CMakeLists.txt  test_presidio.c
test_app/: CMakeLists.txt  sdkconfig.defaults
test_app/main/: CMakeLists.txt  test_main.c
